# libsecretxx

./: .gitignore  CMakeLists.txt  README.md
include/secret/: secret.hpp  secret_schema.hpp  secret_service.hpp  secret_value.hpp
include/util/: g_hash_table.hpp
src/: CMakeLists.txt  mocklib.cpp  secret_schema.cpp  secret_service.cpp  secret_value.cpp
tests/: CMakeLists.txt  intergration_test_secret_service.cpp  test_secret_schema.cpp  test_secret_service.cpp  test_secret_value.cpp
